[project]
name = "uaaa-poc"
version = "0.1.0"
description = "Universal Adversarial Attack for Audio (Proof of Concept)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai-whisper>=20250625",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
